// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should City render correctly active city 1`] = `
<li
  className="locations__item"
>
  <a
    className="locations__item-link tabs__item  tabs__item--active"
    onClick={[Function]}
  >
    <span>
      Paris
    </span>
  </a>
</li>
`;

exports[`Should City render correctly active city 2`] = `
<li
  className="locations__item"
>
  <a
    className="locations__item-link tabs__item "
    onClick={[Function]}
  >
    <span>
      Paris
    </span>
  </a>
</li>
`;
